syntax = "proto3";

package accounts;

option go_package = "pb/accounts";

// The Accounts service definition.
service AccountService {
  // Retrieve account by username
  rpc GetAccountByID (AccountID) returns (GetAccountResponse) {}

  // Retrieve account by username
  rpc GetAccountByUsername (AccountUsername) returns (GetAccountResponse) {}

  // Creates new account. Id must be empty.
  rpc CreateAccount (Account) returns (StatusResponse) {}

  // Updates all fields in the given account. Id must be set.
  rpc UpdateAccount(Account) returns (StatusResponse) {}

  // Deletes the accounts given its id.
  rpc DeleteAccount(AccountID) returns (StatusResponse) {}
}


message Account {
  // Unique account id in the Task Manager system.
  int64 id = 1;

  // Unique username.
  string username = 2;

  // User's email.
  string email = 3;

  // Account password
  string password = 4;
}

message StatusResponse {
  bool succeded = 1;
  int64 account_id = 2;
  string error = 3;
}

message AccountID {
  int64 id = 1;
}

message AccountUsername {
  string username = 1;
}

message GetAccountResponse {
  bool exists = 1;
  Account account = 2;
}
